--- a/src/js/components/Gallery/Gallery.styl
+++ b/src/js/components/Gallery/Gallery.styl
@@ -1,6 +1,10 @@
 .workers-gallery
   display flex
   flex-wrap wrap
+  justify-content center
   .worker-photo
-    width 350px
+    width calc(100%/3)
     margin 10px
+  .worker-name, .worker-position
+    text-align center
+    font-size 22px
