--- a/src/js/components/List/List.styl
+++ b/src/js/components/List/List.styl
@@ -6,6 +6,7 @@ table
   padding 15px
   tr
     border-bottom 1px solid $gray
+    height 40px
   th
     color $orange
     font-size 20px
@@ -14,3 +15,5 @@ table
     text-align left
     &.time
       width 20%
+.home-add-btn
+  margin-top 100px
