--- a/src/js/index.styl
+++ b/src/js/index.styl
@@ -19,7 +19,8 @@ hr
   margin 0 auto
 
 body
-  background-color $gray
+  background-image url("/images/bg.jpg")
+  background-size contain
   margin 0
   font-family $montserrat-regular
 
@@ -27,23 +28,23 @@ form
   width 400px
   margin 0 auto
   padding 50px 0
-  input, select, textarea
-    margin 10px
-    background-color: transparent;
-    border: 1px solid #e3e3e3;
-    border-radius: 30px;
-    color: #2c2c2c;
-    line-height: normal;
-    font-size: .8571em;
-    transition: color .3s ease-in-out,border-color .3s ease-in-out,background-color .3s ease-in-out;
-    box-shadow: none;
-    padding: 10px 18px;
-    outline none
-    &:focus
-      border: 1px solid #f96332;
+
   textarea
     min-height 300px
-
+input, select, textarea
+  margin 10px
+  background-color: transparent;
+  border: 1px solid #e3e3e3;
+  border-radius: 30px;
+  color: #2c2c2c;
+  line-height: normal;
+  font-size: .8571em;
+  transition: color .3s ease-in-out,border-color .3s ease-in-out,background-color .3s ease-in-out;
+  box-shadow: none;
+  padding: 10px 18px;
+  outline none
+  &:focus
+    border: 1px solid #f96332;
 img
   max-width 100%
 
