--- a/src/js/index.styl
+++ b/src/js/index.styl
@@ -33,35 +33,33 @@ form
     min-height 300px
 input, select, textarea
   margin 10px
-  background-color: transparent;
-  border: 1px solid #e3e3e3;
-  border-radius: 30px;
-  color: #2c2c2c;
-  line-height: normal;
-  font-size: .8571em;
-  transition: color .3s ease-in-out,border-color .3s ease-in-out,background-color .3s ease-in-out;
-  box-shadow: none;
-  padding: 10px 18px;
+  background-color transparent
+  border 1px solid #e3e3e3
+  border-radius 30px
+  color: #2c2c2c
+  line-height normal
+  font-size .8571em
+  transition color .3s ease-in-out,border-color .3s ease-in-out,background-color .3s ease-in-out
+  box-shadow none
+  padding 10px 18px
   outline none
   &:focus
-    border: 1px solid #f96332;
+    border 1px solid #f96332
 img
   max-width 100%
 
 
 button
-  border-width: 2px;
-  font-weight: 400;
-  font-size: .8571em;
-  border-radius: 30px;
-  padding-right: 23px;
-  padding-left: 23px;
-  line-height: 1.35em;
-  background-color: #f96332;
+  border-width 2px
+  font-weight 400
+  font-size .8571em
+  border-radius: 30px
+  line-height 1.35em
+  background-color #f96332
   padding 10px
   width 300px
   display block
-  color: #fff;
-  border: none;
-  margin: 10px auto;
-  cursor: pointer;
+  color #fff
+  border none
+  margin 10px auto
+  cursor pointer
