--- a/src/js/components/Sidebar/Sidebar.styl
+++ b/src/js/components/Sidebar/Sidebar.styl
@@ -2,6 +2,7 @@
   height 100%
   width 260px
   z-index 1030
+  position relative
   background-color #f96332
   min-height 100%
   box-shadow 0 2px 22px 0 rgba(0,0,0,.2), 0 2px 30px 0 rgba(0,0,0,.35)
@@ -11,3 +12,9 @@
     text-align center
     padding 25px
     display block
+.cat-bg
+  position absolute
+  bottom 0
+  right 20px
+  width 300px
+
