--- a/src/js/components/ListItem/ListItem.styl
+++ b/src/js/components/ListItem/ListItem.styl
@@ -1,12 +1,5 @@
-.worker-time
-  cursor pointer
-
-.time-input
-    width 50px
-    margin 0 auto
-    text-align center
-
-button
-  width 150px
+button.btn-action
+  width 130px
   margin 0
+  padding 0
 
