remade server unit tests

--- a/src/js/components/Intro/Intro.styl
+++ b/src/js/components/Intro/Intro.styl
@@ -1,7 +1,7 @@
 @import "~js/vars";
 
 .intro
-  background linear-gradient(90deg,$dark-blue 0,$blue 60%,$light-blue)
+  background #BCE3FF
   min-height 40px
   padding 30px
   text-transform uppercase
