--- a/src/js/components/Sidebar/Sidebar.styl
+++ b/src/js/components/Sidebar/Sidebar.styl
@@ -3,7 +3,7 @@
   width 260px
   z-index 1030
   position relative
-  background-color #f96332
+  background-color #AAB3E2
   min-height 100%
   box-shadow 0 2px 22px 0 rgba(0,0,0,.2), 0 2px 30px 0 rgba(0,0,0,.35)
   a.heading
