--- a/src/js/components/List/List.styl
+++ b/src/js/components/List/List.styl
@@ -23,7 +23,7 @@
     word-break: break-word;
 
   .table-head
-    color $orange
+    color #E58291
     font-size 20px
     font-weight 300
     font-family $montserrat-thin
