--- a/src/js/index.styl
+++ b/src/js/index.styl
@@ -44,7 +44,8 @@ input, select, textarea
   padding 10px 18px
   outline none
   &:focus
-    border 1px solid #f96332
+    border 1px solid #E58291
+
 img
   max-width 100%
 
@@ -55,7 +56,7 @@ button
   font-size .8571em
   border-radius: 30px
   line-height 1.35em
-  background-color #f96332
+  background-color #AAB3E2
   padding 10px
   width 300px
   display block
