--- a/src/js/components/List/List.styl
+++ b/src/js/components/List/List.styl
@@ -2,25 +2,24 @@
 
 .table
   background-color white
-  width 100%
-  display: flex
+  display flex
   flex-flow column nowrap
   justify-content space-between
-  padding 15px
+  padding 40px
   .table-row
     border-bottom 1px solid $gray
     height 40px
     display flex
     width 100%
-    flex-flow: row nowrap;
+    flex-flow row nowrap
 
   .table-row-item
-    display: flex;
-    flex-flow: row nowrap;
-    flex-grow: 1;
-    flex-basis: 0;
-    padding: 0.5em;
-    word-break: break-word;
+    display flex
+    flex-flow row nowrap
+    flex-grow 1
+    flex-basis 0
+    padding 0.5em
+    word-break break-word
 
   .table-head
     color #E58291
