--- a/src/js/components/SIdebarMenu/SidebarMenu.styl
+++ b/src/js/components/SIdebarMenu/SidebarMenu.styl
@@ -1,22 +1,19 @@
 ul
-  padding  0
+  width 600px
+  text-align center
+  display flex
   li
     display block
-    padding 5px
-    text-align center
-    margin: 0 10px
-
     a
       text-decoration none
       color white
-      width 100%
-      display flex
       align-items center
+      display flex
+      margin-left 20px
 
     .icon
       height 20px
       width 20px
       display block
       background-repeat no-repeat
-      margin-right 30px
-      margin-left 10px
+      margin 0 20px
