--- a/src/js/components/Sidebar/Sidebar.styl
+++ b/src/js/components/Sidebar/Sidebar.styl
@@ -1,17 +1,26 @@
 .sidebar
-  height 100%
-  width 260px
+  height 70px
+  width 100%
   z-index 1030
+  display flex
+  text-align center
+  justify-content space-around
+  align-items center
   position relative
   background-color #AAB3E2
-  min-height 100%
   box-shadow 0 2px 22px 0 rgba(0,0,0,.2), 0 2px 30px 0 rgba(0,0,0,.35)
   a.heading
     color #fff
     text-decoration none
     text-align center
     padding 25px
-    display block
+    display flex
+    .icon
+      height 20px
+      width 20px
+      display block
+      background-repeat no-repeat
+      margin 0 10px
 .cat-bg
   position absolute
   bottom 0
