--- a/src/js/components/Sidebar/Sidebar.styl
+++ b/src/js/components/Sidebar/Sidebar.styl
@@ -15,12 +15,14 @@
     text-align center
     padding 25px
     display flex
+    align-items center
     .icon
-      height 20px
-      width 20px
+      height 30px
+      width 30px
       display block
       background-repeat no-repeat
       margin 0 10px
+      background-size contain
 .cat-bg
   position absolute
   bottom 0
