--- a/src/js/vars.styl
+++ b/src/js/vars.styl
@@ -17,8 +17,11 @@ $montserrat-thin = 'MontserratThin', Helvetica, Arial, sans-serif;
 
 $gray = #e8e9ee;
 $dark-blue = #0c2646;
-$blue = #204065;
+$blue = #bce3ff;
 $light-blue = #2a5788;
 $orange = #f96332;
+$pink = #E58291;
+$violet = #E58291;
+
 
 
