--- a/src/js/components/DashboardContent/DashboardContent.styl
+++ b/src/js/components/DashboardContent/DashboardContent.styl
@@ -5,7 +5,7 @@
   width 85%
   margin -28px auto 0 auto
   border-radius .1875rem
-  box-shadow 0 1px 15px 1px rgba(39,39,39,.1)
+  box-shadow 0 1px 15px 1px rgba(39, 39, 39, .1)
   position relative
 
 .cat-bg
