--- a/src/js/components/Loader/Loader.styl
+++ b/src/js/components/Loader/Loader.styl
@@ -1,7 +1,7 @@
 @import "~js/vars";
 
 .loader
-  background-color rgba(255,255,255, .5)
+  background-color rgba(255, 255, 255, .5)
   position absolute
   top 0
   left 0
