--- a/src/js/components/Sidebar/Sidebar.styl
+++ b/src/js/components/Sidebar/Sidebar.styl
@@ -8,7 +8,7 @@
   align-items center
   position relative
   background-color #AAB3E2
-  box-shadow 0 2px 22px 0 rgba(0,0,0,.2), 0 2px 30px 0 rgba(0,0,0,.35)
+  box-shadow 0 2px 22px 0 rgba(0, 0, 0, .2), 0 2px 30px 0 rgba(0, 0, 0, .35)
   a.heading
     color #fff
     text-decoration none
@@ -23,6 +23,7 @@
       background-repeat no-repeat
       margin 0 10px
       background-size contain
+
 .cat-bg
   position absolute
   bottom 0
