fixed webpack config

--- a/src/js/components/ListItem/ListItem.styl
+++ b/src/js/components/ListItem/ListItem.styl
@@ -1,5 +1,16 @@
+@import "~js/vars"
+
 button.btn-action
   width 130px
   margin 0
   padding 0
+
+.table-row-item
+  a
+    color $blue
+    font-weight bold
+    text-decoration none
+    transition 0.3s color
+    &:hover
+      color $violet
 
