--- a/src/js/index.styl
+++ b/src/js/index.styl
@@ -1,8 +1,5 @@
 @import "~js/vars"
 
-*
-  font-family $montserrat-regular
-
 html, body, #root
   height 100%
 
@@ -19,7 +16,7 @@ hr
   margin 0 auto
 
 body
-  background-image url("/images/bg.jpg")
+  background-image url("/images/backgrounds/bg.jpg")
   background-size contain
   margin 0
   font-family $montserrat-regular
